--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
+    "classname": "^0.0.0",
+    "classnames": "^2.3.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
